--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <form>
       <div class="form-group">
         <label for="generic-resume">Generic Resume:</label>
-        <input type="file" id="generic-resume" accept=".doc,.docx,.pdf" />
+        <input type="file" id="generic-resume" accept=".txt" />
       </div>
       <div class="form-group">
         <label for="job-description">Job Description:</label>
@@ -20,8 +20,9 @@
       <button type="button" class="btn" id="generate-resume-button">Generate Custom Resume</button>
     </form> 
 
-    <div id="custom-resume-preview" style="display: none;">
-      <button type="button" class="btn" id="final-resume-button">Generate Final Resume</button>
+    <div id="json-preview" style="display: none;">
+      <h2>Finished Resume:</h2>
+      <pre id="json-content"></pre>
     </div>
   </div>
   
